2003-01-16  Nick Drochak <ndrochak@gol.com>

	* makefile.gnu: Add corlib target to just build that.

2003-01-14  Duncan Mak  <duncan@ximian.com>

       * ilasm/parser/ScannerAdapter.cs: Remove the cleanup method now that
       it's no longer in the interface.

2003-01-13  Duncan Mak  <duncan@ximian.com>

	* ilasm/parser/ScannerAdapter.cs: Implement the new cleanup method
	in the tokenizer. This fixes the build.

2003-01-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* README.building: New file.
	* makefile.gnu: install README.building file.

2003-01-09  Sebastien Pouliot  <spouliot@videotron.ca>

	* AUTHORS: add myself to class library list

2002-12-15  Alp Toker  <alp@atoker.com>

	* makefile.gnu: make sure mcs is in PATH, otherwise tell user to read
	INSTALL.txt

2002-12-10  Daniel Morgan <danmorg@sc.rr.com>

	* makefile
	* tools/makefile
	* tools/makefile.gnu: change target
	from SqlSharpCli.exe
	to sqlsharp.exe

2002-12-10  Alp Toker  <alp@atoker.com>

	* ilasm/makefile.gnu: Install ilasm executable with -m 755, not 644
	* ilasm/makefile: ditto

2002-12-10  Gaurav Vaish  <gvaish_mono@lycos.com>

	* AUTHORS: Corrected my email-ID.

2002-11-29  Daniel Morgan  <danmorg@sc.rr.com>

	* INSTALL: renamed to INSTALL.txt because INSTALL 
	interferred with "make install" on windows
	
	* makefile: changes to get "make install" work 
	on windows
	
	* class/makefile.gnu: flush
	
	* ilasm/makefile: updated for windows build
	
	* monoresgen/makefile: updated for windows build
	
	* tools/SqlSharp/SqlSharpCli.build: flush
	
	* winexe.in: add file to be template for executable assemblies
	to be installed on windows via "make install" by providing
	a script that runs mono and the assembly 
	like mcs runs mono mcs.exe 
	
2002-11-28  Daniel Morgan  <danmorg@sc.rr.com>

	* makefile.gnu: added tools directory to linux build

	* tools/makefile.gnu: added new file to built tools and install.
        dist works too.  test is just blank.
