@@ -1,3 +1,7 @@
+2003-02-10  Nick Drochak  <ndrochak@gol.com>
+
+	* makefile: Add testcorlib target to run just the corlib unit tests.
+
 2003-01-16  Nick Drochak <ndrochak@gol.com>
 
 	* makefile.gnu: Add corlib target to just build that.
